[tool.poetry]
name = "play-python"
version = "0.1.0"
description = ""
authors = ["henry <devgony@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "run:start"
test = "run:test"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "0.17.6"
pytest-asyncio = "^0.23.3"
async-asgi-testclient = "^1.4.11"
starlette-context = "^0.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
